fix horizontal overflow

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -9,6 +9,10 @@
   }
 }
 
+* {
+  overflow-x: hidden;
+}
+
 body {
   height: 100vh;
   width: 100vw;
